--- a/final/contact.html
+++ b/final/contact.html
@@ -34,7 +34,7 @@
         
         <p>Looking for a place to stay? We’ve partnered with trusted providers around Yosemite, including options listed on the official National Park website and Expedia. Whether you're interested in cozy lodges, scenic campgrounds, or family-friendly hotels, we can point you in the right direction. Let us know your travel dates and preferences, and we’ll help you find something that fits your style and budget.</p>
 
-<form onsubmit="handleSubmit(event)" class="contact-form">
+<form id="contact-form" class="contact-form">
   <label for="name">Name:</label>
   <input type="text" id="name" name="name" required />
 
