--- a/final/index.html
+++ b/final/index.html
@@ -2,93 +2,96 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
-    <meta name="author" content="Zhili Zhong" />
-    
-    <!-- Social Sharing Metadata -->
-    <meta property="og:title" content="Yosemite Travel Guide" />
-    <meta property="og:description" content="Plan your unforgettable trip to one of America's most iconic national parks." />
-    <meta property="og:image" content="images/og-image.jpg" />
-    <meta property="og:url" content="https://yourusername.github.io/final/index.html" />
-    <meta name="twitter:card" content="summary_large_image" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
+  <meta name="author" content="Zhili Zhong" />
 
-    <title>Yosemite Travel Guide</title>
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <!-- Social Sharing Metadata -->
+  <meta property="og:title" content="Yosemite Travel Guide" />
+  <meta property="og:description"
+    content="Plan your unforgettable trip to one of America's most iconic national parks." />
+  <meta property="og:image" content="images/og-image.jpg" />
+  <meta property="og:url" content="https://yourusername.github.io/final/index.html" />
+  <meta name="twitter:card" content="summary_large_image" />
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Lato&display=swap" rel="stylesheet" />
+  <title>Yosemite Travel Guide</title>
+  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Lato&display=swap"
+    rel="stylesheet" />
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <h1>Yosemite Travel Guide</h1>
+  <header style="z-index:1002; position:relative;">
+    <div class="logo">
+      <h1>Yosemite Travel Guide</h1>
+    </div>
+    <nav>
+      <button id="menu-toggle" aria-label="Menu">&#9776;</button>
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="attractions.html">Attractions</a></li>
+        <li><a href="hiking.html">Hiking Trails</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero" style="z-index:0; position:relative;">
+      <div class="hero-video-wrapper" style="z-index:-1;">
+        <video id="heroVideo" autoplay muted playsinline></video>
+      </div>
+      <div class="hero-text">
+        <h2>Welcome to Yosemite National Park</h2>
+        <p>Plan your unforgettable trip to one of America's most iconic national parks.</p>
+        <a class="cta-button" href="attractions.html">Explore Attractions</a>
+      </div>
+    </section>
+
+    <section class="card-grid">
+      <a href="attractions.html" class="card" style="text-decoration: none;">
+        <div class="card-content">
+          <h3>Attractions</h3>
+          <p>Discover breathtaking landmarks like El Capitan, Half Dome, and Yosemite Falls.</p>
         </div>
-        <nav>
-            <button id="menu-toggle" aria-label="Menu">&#9776;</button>
-            <ul id="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="attractions.html">Attractions</a></li>
-                <li><a href="hiking.html">Hiking Trails</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+      </a>
 
-    <main>
-        <section class="hero">
-            <div class="hero-video-wrapper">
-                <video id="heroVideo" autoplay muted playsinline></video>
-            </div>
-            <div class="hero-text">
-                <h2>Welcome to Yosemite National Park</h2>
-                <p>Plan your unforgettable trip to one of America's most iconic national parks.</p>
-                <a class="cta-button" href="attractions.html">Explore Attractions</a>
-            </div>
-        </section>
+      <a href="hiking.html" class="card" style="text-decoration: none;">
+        <div class="card-content">
+          <h3>Hiking Trails</h3>
+          <p>Find hiking routes for all skill levels, from relaxing strolls to challenging climbs.</p>
+        </div>
+      </a>
 
-  <section class="card-grid">
-  <a href="attractions.html" class="card" style="text-decoration: none;">
-    <div class="card-content">
-      <h3>Attractions</h3>
-      <p>Discover breathtaking landmarks like El Capitan, Half Dome, and Yosemite Falls.</p>
-    </div>
-  </a>
+      <a href="contact.html" class="card" style="text-decoration: none;">
+        <div class="card-content">
+          <h3>Lodging & Camping</h3>
+          <p>Plan your stay inside or near the park, including campsites and lodges.</p>
+        </div>
+      </a>
+    </section>
 
-  <a href="hiking.html" class="card" style="text-decoration: none;">
-    <div class="card-content">
-      <h3>Hiking Trails</h3>
-      <p>Find hiking routes for all skill levels, from relaxing strolls to challenging climbs.</p>
-    </div>
-  </a>
+    <section class="announcements">
+      <h3>Seasonal Tips</h3>
+      <p>Spring is the perfect time to visit for stunning waterfalls. Book early for summer camping!</p>
+    </section>
+  </main>
 
-  <a href="contact.html" class="card" style="text-decoration: none;">
-    <div class="card-content">
-      <h3>Lodging & Camping</h3>
-      <p>Plan your stay inside or near the park, including campsites and lodges.</p>
-    </div>
-  </a>
-</section>
+  <footer>
+    <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
+    <p>
+      <a href="attributions.html">Attributions</a> |
+      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
+    </p>
+  </footer>
 
-
-        <section class="announcements">
-            <h3>Seasonal Tips</h3>
-            <p>Spring is the perfect time to visit for stunning waterfalls. Book early for summer camping!</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
-        <p>
-            <a href="attributions.html">Attributions</a> |
-            <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
-        </p>
-    </footer>
-
-    <script type="module" src="scripts/main.js"></script>
+  <script type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
