--- a/final/attributions.html
+++ b/final/attributions.html
@@ -3,57 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Attributions for resources used in Yosemite Travel Guide project." />
+  <meta name="author" content="Zhili Zhong" />
   <title>Attributions | Yosemite Travel Guide</title>
   <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <header>
-    <h1>Resource Attributions</h1>
+    <div class="logo">
+      <h1>Yosemite Travel Guide</h1>
+    </div>
+    <nav>
+      <button id="menu-toggle" aria-label="Menu">&#9776;</button>
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="attractions.html">Attractions</a></li>
+        <li><a href="hiking.html">Hiking Trails</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="attributions.html" class="active">Attributions</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <section>
-      <h2>Images</h2>
-      <ul>
-        <li>Most Yosemite landscape and nature photographs are original content, photographed by Zhili Zhong.</li>
-        <li>Hiking trail map sourced from Xiaohongshu (小红书) – used under fair use for educational purposes.</li>
-        <li>Lodging photos and information from:
-          <ul>
-            <li><a href="https://www.expedia.com" target="_blank" rel="noopener">Expedia</a> – lodging options and property images</li>
-            <li><a href="https://www.nps.gov/yose/index.htm" target="_blank" rel="noopener">Yosemite National Park Official Site</a> – park-managed lodging information</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
+    <section class="card" style="margin: 2rem;">
+      <div class="card-content">
+        <h2>Attributions</h2>
 
-    <section>
-      <h2>Videos</h2>
-      <ul>
-        <li>Background videos <strong>scene1.mp4</strong> and <strong>scene2.mp4</strong> are original recordings filmed by Zhili Zhong, used with full rights.</li>
-      </ul>
-    </section>
+        <h3>Images</h3>
+        <ul>
+          <li>Most Yosemite landscape and nature photographs are original content, photographed by Zhili Zhong.</li>
+          <li>Hiking trail map sourced from Xiaohongshu (小红书) – used under fair use for educational purposes.</li>
+          <li>
+            Lodging photos and information from:
+            <ul>
+              <li><a href="https://www.expedia.com" target="_blank" rel="noopener">Expedia</a> – lodging options and property images</li>
+              <li><a href="https://www.nps.gov/yose/index.htm" target="_blank" rel="noopener">Yosemite National Park Official Site</a> – park-managed lodging information</li>
+            </ul>
+          </li>
+        </ul>
 
-    <section>
-      <h2>Fonts</h2>
-      <ul>
-        <li>Google Fonts:
-          <a href="https://fonts.google.com/specimen/Open+Sans" target="_blank" rel="noopener">Open Sans</a>,
-          <a href="https://fonts.google.com/specimen/Roboto+Slab" target="_blank" rel="noopener">Roboto Slab</a>,
-          <a href="https://fonts.google.com/specimen/Lato" target="_blank" rel="noopener">Lato</a>
-        </li>
-      </ul>
-    </section>
+        <h3>Videos</h3>
+        <ul>
+          <li>Background videos <strong>scene1.mp4</strong> and <strong>scene2.mp4</strong> are original recordings filmed by Zhili Zhong, used with full rights.</li>
+        </ul>
 
-    <section>
-      <h2>Icons</h2>
-      <ul>
-        <li>Favicon icon designed using <a href="https://www.flaticon.com" target="_blank" rel="noopener">Flaticon</a> resources.</li>
-      </ul>
+        <h3>Fonts</h3>
+        <ul>
+          <li>Google Fonts:
+            <a href="https://fonts.google.com/specimen/Open+Sans" target="_blank" rel="noopener">Open Sans</a>,
+            <a href="https://fonts.google.com/specimen/Roboto+Slab" target="_blank" rel="noopener">Roboto Slab</a>,
+            <a href="https://fonts.google.com/specimen/Lato" target="_blank" rel="noopener">Lato</a>
+          </li>
+        </ul>
+
+        <h3>Icons</h3>
+        <ul>
+          <li>Favicon icon designed using <a href="https://www.flaticon.com" target="_blank" rel="noopener">Flaticon</a> resources.</li>
+        </ul>
+      </div>
     </section>
   </main>
 
   <footer>
-    <p><a href="index.html">← Back to Home</a></p>
+    <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
+    <p>
+      <a href="attributions.html">Attributions</a> |
+      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
+    </p>
   </footer>
+
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
