--- a/final/index.html
+++ b/final/index.html
@@ -38,6 +38,7 @@
         <li><a href="attractions.html">Attractions</a></li>
         <li><a href="hiking.html">Hiking Trails</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="attributions.html" class="active">Attributions</a></li>
       </ul>
     </nav>
   </header>
