--- a/final/attractions.html
+++ b/final/attractions.html
@@ -18,9 +18,10 @@
       <button id="menu-toggle" aria-label="Menu">&#9776;</button>
       <ul id="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="attractions.html" class="active">Attractions</a></li>
+        <li><a href="attractions.html">Attractions</a></li>
         <li><a href="hiking.html">Hiking Trails</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="attributions.html" class="active">Attributions</a></li>
       </ul>
     </nav>
   </header>
