--- a/final/contact.html
+++ b/final/contact.html
@@ -20,7 +20,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="attractions.html">Attractions</a></li>
         <li><a href="hiking.html">Hiking Trails</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="attributions.html" class="active">Attributions</a></li>
       </ul>
     </nav>
   </header>
