--- a/final/hiking.html
+++ b/final/hiking.html
@@ -19,8 +19,9 @@
       <ul id="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="attractions.html">Attractions</a></li>
-        <li><a href="hiking.html" class="active">Hiking Trails</a></li>
+        <li><a href="hiking.html">Hiking Trails</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="attributions.html" class="active">Attributions</a></li>
       </ul>
     </nav>
   </header>
