--- a/final/thankyou.html
+++ b/final/thankyou.html
@@ -3,35 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Thank you page after contact form submission." />
+  <meta name="author" content="Zhili Zhong" />
   <title>Thank You - Yosemite Travel Guide</title>
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
-<body>
+
+<body class="thank-you-page">
+  <header>
+    <div class="logo">
+      <h1>Yosemite Travel Guide</h1>
+    </div>
+    <nav>
+      <button id="menu-toggle" aria-label="Menu">&#9776;</button>
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="attractions.html">Attractions</a></li>
+        <li><a href="hiking.html">Hiking Trails</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main class="thank-you">
     <h2>Thank You for Contacting Us!</h2>
     <p>We’ve received your message and will get back to you shortly. Here’s what you submitted:</p>
-    <p id="user-message"></p>
+    <p id="user-message">(Loading...)</p>
     <a href="index.html" class="cta-button">Return to Home</a>
   </main>
 
-  <script>
-    const name = localStorage.getItem("contactName") || "Guest";
-    const subject = localStorage.getItem("contactSubject") || "(No subject)";
-    const message = localStorage.getItem("contactMessage") || "(No message)";
+  <footer>
+    <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
+    <p>
+      <a href="attributions.html">Attributions</a> |
+      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
+    </p>
+  </footer>
 
-    document.getElementById("user-message").innerHTML = `
-      <strong>Name:</strong> ${name}<br>
-      <strong>Subject:</strong> ${subject}<br>
-      <strong>Message:</strong><br><em>${message.replace(/\n/g, "<br>")}</em>
-    `;
-
-    // Clear localStorage
-    localStorage.removeItem("contactName");
-    localStorage.removeItem("contactSubject");
-    localStorage.removeItem("contactMessage");
-  </script>
-
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
