--- a/final/index.html
+++ b/final/index.html
@@ -8,13 +8,13 @@
     content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
   <meta name="author" content="Zhili Zhong" />
 
-  <!-- Social Sharing Metadata -->
+  <!-- Open Graph Metadata for social sharing -->
   <meta property="og:title" content="Yosemite Travel Guide" />
-  <meta property="og:description"
-    content="Plan your unforgettable trip to one of America's most iconic national parks." />
-  <meta property="og:image" content="images/og-image.jpg" />
-  <meta property="og:url" content="https://yourusername.github.io/final/index.html" />
+  <meta property="og:description" content="Plan your unforgettable trip to one of America's most iconic national parks. Explore attractions, hiking trails, and lodging options in Yosemite." />
+  <meta property="og:image" content="https://leo060702.github.io/wdd231/final/images/og-image.jpg" />
+  <meta property="og:url" content="https://leo060702.github.io/wdd231/final/index.html" />
   <meta name="twitter:card" content="summary_large_image" />
+
 
   <title>Yosemite Travel Guide</title>
   <link rel="stylesheet" href="styles/styles.css" />
