--- a/final/index.html
+++ b/final/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
+  <meta name="description" content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
   <meta name="author" content="Zhili Zhong" />
 
   <!-- Open Graph Metadata for social sharing -->
@@ -15,38 +14,41 @@
   <meta property="og:url" content="https://leo060702.github.io/wdd231/final/index.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
-
   <title>Yosemite Travel Guide</title>
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Lato&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Lato&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-  <header style="z-index:1002; position:relative;">
+  <header>
     <div class="logo">
-      <h1>Yosemite Travel Guide</h1>
+      <span class="visually-hidden">Main Site Title</span>
     </div>
     <nav>
-      <button id="menu-toggle" aria-label="Menu">&#9776;</button>
+      <button id="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
       <ul id="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="attractions.html">Attractions</a></li>
         <li><a href="hiking.html">Hiking Trails</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="attributions.html" class="active">Attributions</a></li>
+        <li><a href="attributions.html">Attributions</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section class="hero" style="z-index:0; position:relative;">
-      <div class="hero-video-wrapper" style="z-index:-1;">
-        <video id="heroVideo" autoplay muted playsinline></video>
+    <!-- Main heading for screen readers and accessibility -->
+    <h1 class="visually-hidden">Yosemite Travel Guide</h1>
+
+    <section class="hero">
+      <div class="hero-video-wrapper">
+        <video id="heroVideo" autoplay muted playsinline>
+          <source src="videos/scene1.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div class="hero-text">
         <h2>Welcome to Yosemite National Park</h2>
@@ -56,21 +58,21 @@
     </section>
 
     <section class="card-grid">
-      <a href="attractions.html" class="card" style="text-decoration: none;">
+      <a href="attractions.html" class="card">
         <div class="card-content">
           <h3>Attractions</h3>
           <p>Discover breathtaking landmarks like El Capitan, Half Dome, and Yosemite Falls.</p>
         </div>
       </a>
 
-      <a href="hiking.html" class="card" style="text-decoration: none;">
+      <a href="hiking.html" class="card">
         <div class="card-content">
           <h3>Hiking Trails</h3>
           <p>Find hiking routes for all skill levels, from relaxing strolls to challenging climbs.</p>
         </div>
       </a>
 
-      <a href="contact.html" class="card" style="text-decoration: none;">
+      <a href="contact.html" class="card">
         <div class="card-content">
           <h3>Lodging & Camping</h3>
           <p>Plan your stay inside or near the park, including campsites and lodges.</p>
@@ -88,7 +90,7 @@
     <p>© 2025 Yosemite Travel Guide. All rights reserved.</p>
     <p>
       <a href="attributions.html">Attributions</a> |
-      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank">Project Demo Video</a>
+      <a href="https://www.youtube.com/watch?v=your-demo-video" target="_blank" rel="noopener">Project Demo Video</a>
     </p>
   </footer>
 
