--- a/final/index.html
+++ b/final/index.html
@@ -45,10 +45,7 @@
 
     <section class="hero">
       <div class="hero-video-wrapper">
-        <video id="heroVideo" autoplay muted playsinline>
-          <source src="videos/scene1.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
+        <video id="heroVideo" autoplay muted playsinline>Your browser does not support the video tag.</video>
       </div>
       <div class="hero-text">
         <h2>Welcome to Yosemite National Park</h2>
