--- a/final/index.html
+++ b/final/index.html
@@ -41,7 +41,7 @@
 
   <main>
     <!-- Main heading for screen readers and accessibility -->
-    <h1 class="visually-hidden">Yosemite Travel Guide</h1>
+    <h1>Yosemite Travel Guide</h1>
 
     <section class="hero">
       <div class="hero-video-wrapper">
