--- a/final/index.html
+++ b/final/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
+  <meta name="description"
+    content="Comprehensive travel guide to Yosemite National Park, featuring attractions, trails, lodging, and safety tips." />
   <meta name="author" content="Zhili Zhong" />
 
   <!-- Open Graph Metadata for social sharing -->
   <meta property="og:title" content="Yosemite Travel Guide" />
-  <meta property="og:description" content="Plan your unforgettable trip to one of America's most iconic national parks. Explore attractions, hiking trails, and lodging options in Yosemite." />
+  <meta property="og:description"
+    content="Plan your unforgettable trip to one of America's most iconic national parks. Explore attractions, hiking trails, and lodging options in Yosemite." />
   <meta property="og:image" content="https://leo060702.github.io/wdd231/final/images/og-image.jpg" />
   <meta property="og:url" content="https://leo060702.github.io/wdd231/final/index.html" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -18,14 +20,15 @@
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Lato&display=swap" rel="stylesheet" />
+  <!-- Google Fonts - single merged request -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Lato&display=swap"
+    rel="stylesheet" />
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <span class="visually-hidden">Main Site Title</span>
+      Yosemite Travel Guide
     </div>
     <nav>
       <button id="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
@@ -40,12 +43,13 @@
   </header>
 
   <main>
-    <!-- Main heading for screen readers and accessibility -->
-    <h1>Yosemite Travel Guide</h1>
+    <h1 class="visually-hidden">Yosemite Travel Guide</h1>
 
     <section class="hero">
       <div class="hero-video-wrapper">
-        <video id="heroVideo" autoplay muted playsinline>Your browser does not support the video tag.</video>
+        <video id="heroVideo" autoplay muted playsinline>
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div class="hero-text">
         <h2>Welcome to Yosemite National Park</h2>
